# backend/docs/swagger.json
@@ -554,10 +554,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/domain.StudyRater"
-                            }
+                            "$ref": "#/definitions/api.StudyRatersResponse"
                         }
                     },
                     "400": {
@@ -1494,14 +1491,10 @@
         "api.AddStudyRaterRequest": {
             "type": "object",
             "required": [
-                "email",
-                "user_id"
+                "email"
             ],
             "properties": {
                 "email": {
-                    "type": "string"
-                },
-                "user_id": {
                     "type": "string"
                 }
             }
@@ -1735,6 +1728,20 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/domain.Study"
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "api.StudyRatersResponse": {
+            "type": "object",
+            "properties": {
+                "raters": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.StudyRater"
                     }
                 },
                 "total": {
